# rustowl

./: .gitignore  .typos.toml  CHANGELOG.md  Cargo.toml  Dockerfile  Eask  LICENSE  PROMPT.md  README.md  build.rs  deny.toml  rust-toolchain.toml  rustowl.el
.cargo/: config.toml
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/comment-benchmark/: action.yml  comment-script.js
.github/actions/get-rust-channel/: action.yml
.github/actions/rust-toolchain-yq/: action.yml
.github/actions/setup-rust-llvm/: action.yml
.github/workflows/: archlinux-validation.yml  aur-check.yml  bench-performance.yml  build.yaml  build.yml  changelog.yml  check.yaml  checks.yml  codeql.yml  commitlint.yml  committed.yml  coverage.yml  create-baseline.yml  docker-checks.yml  emacs-checks.yml  neovim-checks.yml  release-github.yml  release-registries.yml  release.yaml  release.yml  security.yml  setup-baseline.yml  spelling.yml  stale.yml  validate-pr-title.yml  zizmor.yml
algo-tests/: Cargo.toml  f1_v1.txt  f1_v2.txt  f2_v1.txt  f2_v2.txt  f3_v1.txt  f3_v2.txt
algo-tests/src/: vec.rs
aur/: PKGBUILD  PKGBUILD-BIN  PKGBUILD-GIT
benches/: cargo_output_parse_bench.rs  decos_bench.rs  line_col_bench.rs  rustowl_bench_simple.rs
crates/rustowl/: Cargo.toml  build.rs
crates/rustowl/benches/: cargo_output_parse_bench.rs  decos_bench.rs  line_col_bench.rs  rustowl_bench_simple.rs
crates/rustowl/src/: cache.rs  error.rs  lib.rs  toolchain.rs
crates/rustowl/src/lsp/: analyze.rs  backend.rs  decoration.rs  progress.rs
crates/rustowl/tests/: rustowlc_integration.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs  util.rs
crates/xtask/src/commands/: bench.rs  bump.rs  dev_checks.rs  mod.rs  nvim_tests.rs  security.rs  size_check.rs  toolchain.rs
docs/: CONTRIBUTING.md  build.md  cache-configuration.md  drmemory-setup.md  emacs-configuration.md  installation.md  lsp-spec.md  neovim-configuration.md  perf-tests.1  perf-tests.md  usage.md  vscode-configuration.md
emacs/: cc-autoloads.el  eask-test.el  rustowl.el  test.el
emacs-tests/: rustowl-test.el
ftplugin/: rust.lua
lua/rustowl/: config.lua
nvim-tests/: test_color_config.lua  test_config.lua  test_ftplugin.lua  test_highlight.lua  test_lsp.lua
perf-tests/: perf-tests.sh
perf-tests/dummy-package/: Cargo.toml  README.md
perf-tests/dummy-package/src/: lib.rs  main.rs
scripts/: README.md  algorithm.sh  bench.sh  bump.sh  dev-checks.sh  installer  package.json  perf-tests.sh  pnpm-lock.yaml  run_nvim_tests.sh  security.sh  setup-dev.sh  setup-drmemory-windows.ps1  size-check.sh  toolchain
src/: cache.rs  cli.rs  error.rs  lib.rs  miri_tests.rs  models.rs  shells.rs  toolchain.rs  utils.rs  visualize.rs
src/lsp/: analyze.rs  backend.rs  decoration.rs  progress.rs
src/visualize/: syntax.rs
tests/: algorithm.rs  rustowlc_integration.rs
tests/snapshots/: algorithm__f1_v1.snap  algorithm__f1_v2.snap  algorithm__f2_v1.snap  algorithm__f2_v2.snap  algorithm__f3_v1.snap  algorithm__f3_v2.snap  algorithm__f4_v1.snap  algorithm__f5_r.snap
vscode/: .oxlintrc.json  README.md  esbuild.js  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
vscode/src/: bootstrap.ts  extension.ts  schemas.ts
vscode/tests/: bootstrap.test.ts  extension.test.ts  mocks.ts  runTest.ts  schemas.test.ts  suite.ts
