[package]
name = "rustowl"
version = "1.0.0-rc.1"
authors = ["cordx56 <cordx56@cordx.cx>"]
edition = "2024"
description = "Visualize Ownership and Lifetimes in Rust"
documentation = "https://github.com/cordx56/rustowl/blob/main/README.md"
readme = "README.md"
repository = "https://github.com/cordx56/rustowl"
license = "MPL-2.0"
keywords = ["lifetime", "lsp", "ownership", "visualization"]
categories = ["development-tools", "visualization"]

[package.metadata.rust-analyzer]
rustc_private = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/rustowl-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install", "compile"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[[bench]]
harness = false
name = "rustowl_bench_simple"

[[bench]]
harness = false
name = "line_col_bench"

[dependencies]
anyhow = "1"
cargo_metadata = "0.23"
clap = { version = "4", features = ["cargo", "derive"] }
clap_complete = "4"
clap_complete_nushell = "4"
clap-verbosity-flag = { version = "3", default-features = false, features = [
  "tracing"
] }
flate2 = "1"
foldhash = "0.2.0"
indexmap = { version = "2", features = ["rayon", "serde"] }
indicatif = "0.17"
memchr = "2"
process_alive = "0.2"
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "http2",
  "rustls-tls-native-roots-no-provider",
  "socks",
  "system-proxy",
] }
rustls = { version = "0.23.35", default-features = false, features = [
  "aws_lc_rs",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = { version = "1.15", features = ["serde", "union"] }
smol_str = { version = "0.3", features = ["serde"] }
tar = "0.4.44"
tempfile = "3"
tokio = { version = "1", features = [
  "fs",
  "io-std",
  "io-util",
  "macros",
  "process",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-util = "0.7"
tower-lsp-server = "0.23"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "smallvec"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
divan = "0.1"
rand = { version = "0.9", features = ["small_rng"] }

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_complete_nushell = "4"
clap_mangen = "0.2"
clap-verbosity-flag = { version = "3", default-features = false, features = [
  "tracing"
] }
regex = "1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemalloc-sys = "0.6"
tikv-jemallocator = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
zip = "6.0.0"

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = "fat"
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
strip = "symbols"

[profile.arm-windows-release]
inherits = "release"
lto = "off"

[profile.security]
inherits = "release"
opt-level = 1
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
