[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/rustowl"]

[workspace.package]
edition = "2024"
documentation = "https://github.com/cordx56/rustowl/blob/main/README.md"
repository = "https://github.com/cordx56/rustowl"
license = "MPL-2.0"

[workspace.dependencies]
anyhow = "1"
cargo_metadata = "0.23"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_complete_nushell = "4"
clap_mangen = "0.2"
clap-verbosity-flag = { version = "3", default-features = false, features = [
  "tracing"
] }
divan = "0.1"
ecow = { version = "0.2", features = ["serde"] }
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
foldhash = "0.2.0"
gag = "1"
indexmap = { version = "2", features = ["rayon", "serde"] }
indicatif = { version = "0.18", features = ["improved_unicode", "rayon"] }
jiff = "0.2"
memchr = "2"
num_cpus = "1"
process_alive = "0.2"
rand = "0.9"
rayon = "1"
regex = "1"
reqwest = { version = "0.13", features = [
  "socks",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
tikv-jemalloc-sys = "0.6"
tikv-jemallocator = "0.6"
tokio = { version = "1", features = [
  "fs",
  "io-std",
  "io-util",
  "macros",
  "process",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-util = { version = "0.7", features = ["io-util"] }
tower-lsp-server = "0.23"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1", features = ["fast-rng", "v4"] }
zip = { version = "7", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = "fat"
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
strip = "symbols"

[profile.arm-windows-release]
inherits = "release"
lto = "off"

[profile.security]
inherits = "release"
opt-level = 1
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
