[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
publish = false
license.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
open = "5"
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["process", "rt-multi-thread", "macros", "fs", "io-util"] }
reqwest = { workspace = true }
flate2.workspace = true
tar.workspace = true
jiff.workspace = true
