[package]
name = "rustowl-perf-test-dummy"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.18", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0.12"
log = "0.4"
env_logger = "0.11.8"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "rustowl_perf_test_dummy"
path = "src/lib.rs"

[[bin]]
name = "dummy-app"
path = "src/main.rs"
