[package]
name = "rustowl-perf-test-dummy"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustowl_perf_test_dummy"
path = "src/lib.rs"

[[bin]]
name = "dummy-app"
path = "src/main.rs"

[[example]]
name = "example-target"
path = "examples/example_target.rs"

[[bench]]
name = "bench-target"
path = "benches/bench_target.rs"

[dependencies]
anyhow = "1.0"
base64 = { version = "0.22", optional = true }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4"
reqwest = { version = "0.12.18", features = ["json"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"], optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winuser"], optional = true }

[features]
default = ["tokio"]
advanced_crypto = ["feature_b"]
feature_a = ["dep:winapi"]
feature_b = ["dep:base64"]
networking = ["reqwest", "tokio"]
